# SlicerExampleProject

./: .gitignore  .travis.yml  CMakeLists.txt  setupTests.sh
include/tests/: AllTests.h
include/xos/: board.h  xos.h
src/: CMakeLists.txt  main.c  test.c
src/tests/: CMakeLists.txt  CuTest.c  unslicedTests.c  xosTest.c
src/xos/: CMakeLists.txt  board.c  xos.c
